--- a/HISTORY
+++ b/HISTORY
@@ -1,2 +1,3 @@
 0.0.0   11.07.2019 Start of development
 1.0.0   11.02.2020 Development finished
+1.1.0   13.02.2020 Customizer: Added Padding Size and Font Size
